完成双语版本的内容同步更新

--- a/src/view/lang/en.json
+++ b/src/view/lang/en.json
@@ -37,7 +37,8 @@
       "introduce2": ",Please don’t use any exchange wallets or contribute without whitelist.",
       "timeStart":"Time of Public Sale Start : 14:00 UTC ,19th SEP，2018",
       "timeEnd":"Time of Public Sale End: 14:00 UTC ,2nd OCT，2018,or before if hard cap is reached",
-      "btnName": "Go contribution！"
+      "btnName": "Go contribution",
+      "title3":"Lambda is founded by 23 Top VCs"
     }
   },
   "section2": {
