--- a/src/view/lang/ru.json
+++ b/src/view/lang/ru.json
@@ -37,11 +37,12 @@
       "introduce2": ",Пожалуйста, не используйте обменные кошельки или внесите свой вклад без использования белого списка",
       "timeStart":"Время публичной продажи Начало: 14:00 UTC, 19 SEP, 2018",
       "timeEnd":"Время публичной продажи: 14:00 UTC, 2-й OCT, 2018 или раньше, если достигнута жесткая крышка",
-      "btnName": "Вклад!"
+      "btnName": "Вклад!",
+      "title3":"Lambda основана 23 Top VCs"
     }
   },
   "section2": {
-    "title": "Lambda Provable Data Possesion (PDP) Demo ",
+    "title": "Проигрывание данных Lambda Provable (PDP)",
     "introduce": "Мы считаем, что все проекты хранилищ должны следовать основному требованию обеспечения целостности данных.Кроме того, для данных проектов крайне важно хранить данные в неуязвимых узлах хранения и сделать их надежными и безопасными. В академическом мире существуют два подхода, которые представляют собой Provable Data Possesion  (PDP) и Proof-of-Retrievability (POR) в зависимости от технологической ситуации.Команда проекта Lambda применила эти два подхода на блокчейне через академические исследования и инженерную проверку, которая устранила основные препятствия для децентрализованного хранения.",
     "btnName": "Скачать Демо-версию "
   },
