修改双语相关文案

--- a/src/view/lang/ru.json
+++ b/src/view/lang/ru.json
@@ -38,7 +38,7 @@
       "timeStart":"Время публичной продажи Начало: 14:00 UTC, 19 SEP, 2018",
       "timeEnd":"Время публичной продажи: 14:00 UTC, 2-й OCT, 2018 или раньше, если достигнута жесткая крышка",
       "btnName": "Вклад!",
-      "title3":"Lambda основана 23 Top VCs"
+      "title3":"Lambda финансируется 23 Top VCs"
     }
   },
   "section2": {
