修改俄语文案

--- a/src/view/lang/ru.json
+++ b/src/view/lang/ru.json
@@ -44,7 +44,7 @@
   "section2": {
     "title": "Проигрывание данных Lambda Provable (PDP)",
     "introduce": "Мы считаем, что все проекты хранилищ должны следовать основному требованию обеспечения целостности данных.Кроме того, для данных проектов крайне важно хранить данные в неуязвимых узлах хранения и сделать их надежными и безопасными. В академическом мире существуют два подхода, которые представляют собой Provable Data Possesion  (PDP) и Proof-of-Retrievability (POR) в зависимости от технологической ситуации.Команда проекта Lambda применила эти два подхода на блокчейне через академические исследования и инженерную проверку, которая устранила основные препятствия для децентрализованного хранения.",
-    "btnName": "Скачать Демо-версию "
+    "btnName": "демонстрация"
   },
   "section3": {
     "title": "ВОЗМОЖНОСТИ ПРИМЕНЕНИЯ ",
